avro_derive/tests/ui/avro_rs_373_transparent.stderr
error: AvroSchema derive does not support Serde `transparent` attribute
  --> tests/ui/avro_rs_373_transparent.rs:10:1
   |
10 | / #[serde(transparent)]
11 | | struct Bar {
12 | |     foo: Foo,
13 | | }
   | |_^
